--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
         <h3>
 <a id="welcome-to-4gragithubio" class="anchor" href="#welcome-to-4gragithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to 4gra.github.io</h3>
 
-<p>Not much to see here.  Projects that use this hostname:</p>
 
-<ul>
-<li><a href="http://github.com/4gra/smc-hd-shim">SMC HD Shim</a></li>
-</ul>
+        <p>Not much to see here.  Projects that reference this hostname are listed below:</p>
+
+        <ul>
+          <li><a href="http://github.com/4gra/smc-hd-shim">SMC HD Shim</a></li>
+        </ul>
+        
+        <p>More projects are listed on the <a href="https://github.com/4gra/"> account page.</a></p>
+
       </section>
     </div>
 
