added pclk-mn10 and webmaster tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <meta name="google-site-verification" content="puAIgFK-9xkG-YC6KmC3NWqXq6nuKOFT7oL6iB_YvBg" />
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="4gra.GitHub.io : a front page">
@@ -31,10 +32,11 @@
 <a id="welcome-to-4gragithubio" class="anchor" href="#welcome-to-4gragithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to 4gra.github.io</h3>
 
 
-        <p>Not much to see here.  Projects that reference this hostname are listed below:</p>
+        <p>Not much to see here.  Projects that reference this hostname in some way are listed below:</p>
 
         <ul>
-          <li><a href="http://github.com/4gra/smc-hd-shim">SMC HD Shim</a></li>
+          <li><a href="http://github.com/4gra/smc-hd-shim">SMC HD Shim for MacOS</a></li>
+          <li><a href="https://github.com/4gra/pclk-mn10">PCLK-MN10 hifi control for Linux (or MacOS, or Windows, or...)</a></li>
         </ul>
         
         <p>More projects are listed on the <a href="https://github.com/4gra/"> account page.</a></p>
