--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/4gra">View on GitHub</a>
 
-          <h1 id="project_title">4gra.GitHub.io</h1>
-          <h2 id="project_tagline">a front page</h2>
+          <h1 id="project_title">4gra at github</h1>
+          <h2 id="project_tagline">some of my github projects</h2>
 
         </header>
     </div>
