--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <ul>
           <li><a href="http://github.com/4gra/smc-hd-shim">SMC HD Shim</a> for MacOS</li>
           <li><a href="https://github.com/4gra/pclk-mn10">PCLK-MN10 hifi control for Linux (or MacOS, or Windows, or...)</a> and the <a href="https://github.com/4gra/pclk-mn10/wiki">PCLK-MN10 command wiki</a></li>
+          <li><a href="https:/github.com/4gra/LoopWorkspace">Experimental Loop Fork</a> - for development use only, please only build this to examine my bugs, and definitely not for active use.</li>
         </ul>
         
         <p>More projects are listed on the <a href="https://github.com/4gra/"> account page.</a></p>
