--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <p>Not much to see here.  Projects that reference this hostname in some way are listed below:</p>
 
         <ul>
-          <li><a href="http://github.com/4gra/smc-hd-shim">SMC HD Shim</a> for MacOS</li>
+          <li><a href="https://github.com/4gra/smc-hd-shim">SMC HD Shim</a> for MacOS</li>
           <li><a href="https://github.com/4gra/pclk-mn10">PCLK-MN10 hifi control for Linux (or MacOS, or Windows, or...)</a> and the <a href="https://github.com/4gra/pclk-mn10/wiki">PCLK-MN10 command wiki</a></li>
-          <li><a href="https:/github.com/4gra/LoopWorkspace">Experimental Loop Fork</a> - for development use only, please only build this to examine my bugs, and definitely not for active use.</li>
+          <li><a href="https://github.com/4gra/LoopWorkspace">Loop (Experimental Fork)</a> - for development use only, please only build this to examine my bugs, and definitely not for active use.</li>
         </ul>
         
         <p>More projects are listed on the <a href="https://github.com/4gra/"> account page.</a></p>
